--- a/apps/home/notebooks/cookbook.ipynb
+++ b/apps/home/notebooks/cookbook.ipynb
@@ -1,8 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>ElectricFish Energy INC.</h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Guide for requesting Unit heartbeat data and Nomotion data</h1>\n",
+    "<h3>This notebook is still in development. But api endpoints and api keys are working fine.</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Load the package requests to get up in speed to start requesting information from the reef backend api. Requesting historic information from the healthcheck database is being re-developed right now. Version 0.1 07/20/22</p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +32,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>getNomotion() points to the endpoint to retrieve latest information from the Nomotion heartbeats database</p> "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getParams():\n",
+    "def getNomotion():\n",
+    "    headers = {\"api-key\":\"f54a7b5a-8851-409d-b941-71a9d11ce217\"}\n",
+    "    r = requests.get(\"http://efcentralnetwork.xyz/unitdata\",headers=headers)\n",
+    "    data1 = r.json()\n",
+    "    return data1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>getUnitData() points to the endpoint to get the latest info from the Unit general healthchecks</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getUnitData():\n",
     "    headers = {\"api-key\":\"f54a7b5a-8851-409d-b941-71a9d11ce217\"}\n",
     "    r = requests.get(\"http://efcentralnetwork.xyz/unithealthcheck\",headers=headers)\n",
     "    data1 = r.json()\n",
@@ -23,12 +72,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>getUnits() serves to retrieve live unit IDs and how many units are live.</p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getUnits():\n",
+    "def getUnitsIDs():\n",
     "    headers = {\"api-key\":\"f54a7b5a-8851-409d-b941-71a9d11ce217\"}\n",
     "    r = requests.get(\"http://efcentralnetwork.xyz/getunits\",headers=headers)\n",
     "    data = r.json()\n",
@@ -37,32 +93,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'IVTS': {'batteryVoltage': 0, 'outputCurrent': 0, 'outputVoltage': 0}, 'UNICO': {'controlMode': None, 'currentLimits': [0, 9], 'currentSetup': None, 'faults': [], 'powerLimit': 100000, 'temperature': None, 'voltageLimits': [300, 900], 'voltageSetup': None}, 'batteries': {'SOC': 0, 'contactorsStatus': 0, 'faults': [], 'temperature': None}, 'bender': {'alarm': None, 'resistance': None}, 'externalContactor': 'open', 'msgId': 15, 'timestamp': '2022-07-20,11:38:21.31', 'vSECC': {'chargingState': '', 'contactorRequest': 'open', 'evConnectionState': 'disconnected', 'targetCurrent': 0, 'targetVoltage': 0, 'vehicleSOC': -1}}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'liveunits': ['EFHQ01']}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "params = getParams()\n",
-    "units = getUnits()\n",
-    "units = units['liveunits']\n",
-    "markers = []\n",
-    "if \"coordinates\" not in params:\n",
-    "    params['coordinates']= {\"lat\":37.4530626,\n",
-    "        \"lng\": -122.0776532}\n",
-    "else:\n",
-    "    coordinates = params['coordinates']\n",
-    "    coordinates = coordinates.split('\\n')\n",
-    "    coordinates = coordinates[3].split(' ')\n",
-    "    coordinates[1] = coordinates[1].replace(\"\\r\",\"\")\n",
-    "    params['coordinates'] = coordinates\n",
-    "if \"SOC\" not in params['batteries']:\n",
-    "    params['batteries']['SOC'] = 0\n",
-    "else:\n",
-    "    pass"
+    "a = getUnitData()\n",
+    "print(a)\n",
+    "getUnitsIDs()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Map marker generator below.</h1>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>The code below is a system constructor for javascript to help build the google maps API</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = getUnitData()\n",
+    "units = getUnitsIDs()\n",
+    "units = units['liveunits']\n",
+    "markers = []\n",
+    "try:\n",
+    "    if \"coordinates\" not in params:\n",
+    "        params['coordinates']= {\"lat\":37.4530626,\n",
+    "            \"lng\": -122.0776532}\n",
+    "    else:\n",
+    "        coordinates = params['coordinates']\n",
+    "        coordinates = coordinates.split('\\n')\n",
+    "        coordinates = coordinates[3].split(' ')\n",
+    "        coordinates[1] = coordinates[1].replace(\"\\r\",\"\")\n",
+    "        params['coordinates'] = coordinates\n",
+    "    if \"SOC\" not in params['batteries']:\n",
+    "        params['batteries']['SOC'] = 0\n",
+    "    else:\n",
+    "        pass\n",
+    "except:\n",
+    "    print(params, units)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,45 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['        var myLatlngEFHQ01 = {        lat:37.4530626,        lng:-122.0776532    };        var markerEFHQ01 = new google.maps.Marker({        position: myLatlngEFHQ01,        map,        title:\"EFHQ01\",        icon: mapicon,    });    markerEFHQ01.addListener(\"click\",()=>{        document.getElementById(\"unitName\").innerHTML=markerEFHQ01.title;        document.getElementById(\"SOC\").innerHTML=\"<p>Battery SOC</p>\"+parseFloat(0).toFixed(2)+\"%\";        document.getElementById(\"IVTS\").innerHTML=\"<p>Battery Voltage</p>\"+0+\"V\";        document.getElementById(\"COORD\").innerHTML=\"<p>Unit coordinates</p>\"+markerEFHQ01.getPosition();        map.panTo(markerEFHQ01.getPosition());        map.setZoom(11);        openNav();    });',\n",
-       " '        var myLatlngEFFRE01 = {        lat:37.4530626,        lng:-122.0776532    };        var markerEFFRE01 = new google.maps.Marker({        position: myLatlngEFFRE01,        map,        title:\"EFFRE01\",        icon: mapicon,    });    markerEFFRE01.addListener(\"click\",()=>{        document.getElementById(\"unitName\").innerHTML=markerEFFRE01.title;        document.getElementById(\"SOC\").innerHTML=\"<p>Battery SOC</p>\"+parseFloat(0).toFixed(2)+\"%\";        document.getElementById(\"IVTS\").innerHTML=\"<p>Battery Voltage</p>\"+0+\"V\";        document.getElementById(\"COORD\").innerHTML=\"<p>Unit coordinates</p>\"+markerEFFRE01.getPosition();        map.panTo(markerEFFRE01.getPosition());        map.setZoom(11);        openNav();    });',\n",
-       " '        var myLatlngEFPA01 = {        lat:37.4530626,        lng:-122.0776532    };        var markerEFPA01 = new google.maps.Marker({        position: myLatlngEFPA01,        map,        title:\"EFPA01\",        icon: mapicon,    });    markerEFPA01.addListener(\"click\",()=>{        document.getElementById(\"unitName\").innerHTML=markerEFPA01.title;        document.getElementById(\"SOC\").innerHTML=\"<p>Battery SOC</p>\"+parseFloat(0).toFixed(2)+\"%\";        document.getElementById(\"IVTS\").innerHTML=\"<p>Battery Voltage</p>\"+0+\"V\";        document.getElementById(\"COORD\").innerHTML=\"<p>Unit coordinates</p>\"+markerEFPA01.getPosition();        map.panTo(markerEFPA01.getPosition());        map.setZoom(11);        openNav();    });']"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "markers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'apps'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/neliobatista/Documents/GitHub/flask-light-bootstrap-dashboard/apps/home/notebooks/cookbook.ipynb Célula: 7\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/neliobatista/Documents/GitHub/flask-light-bootstrap-dashboard/apps/home/notebooks/cookbook.ipynb#ch0000009?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mapps\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmarker_gen\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'apps'"
-     ]
-    }
-   ],
-   "source": [
-    "import apps.marker_gen"
    ]
   },
   {
